# Learning_python

./: codes.py  hello.py  main.py  models.py  pyproject.toml  sqlalc_basics.py  typehinting.py
asyncio_files/: coro.py  tasks.py
pydantic_module/: pydanticexamples.py
